# Agentic_AI_Langchain

./: README.md  Useful_Imports_Langchain.docx  main.py  pyproject.toml  requirements.txt
1.1-openai/: 1.1.2-simpleapp.ipynb  GettingStarted.ipynb
1.2-ollama/: app.py
1.3-VectorStores and Retrievers/: vectorretriever.ipynb
3.2-DataIngestion/: 3.2-DataIngestion.ipynb
3.3-Data Transformer/: 3.3-Recursivetextsplitter.ipynb  3.4-Charactertextsplitter.ipynb  3.5-HTMLtextsplitter.ipynb  3.6-RecursiveJsonsplitter.ipynb  speech.txt
3.4-Embedings/: 3.4.2-ollamaembedding.ipynb  3.4.3-huggingfaceembeddings.ipynb  embedding.ipynb
5-VectorStore/: 5.1-Faiss.ipynb  5.2-Chromadb.ipynb  speech.txt
5-VectorStore/chroma_db/: chroma.sqlite3
5-VectorStore/faiss_index/: index.faiss  index.pkl
